# sgl-kernel-xpu

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.xpu_kernel  GEMM_SQRSUM_BUILD.md  GEMM_SQRSUM_PHASE2_TODO.md  MoE_IMPLEMENTATION.md  MoE_IMPLEMENTATION_SUMMARY.md  PHASE2_STEP1_COMPLETE.md  README.md  SGEMM_LORA_B_FWD_PERGROUP_ALPHA_INVESTIGATION.md  THIRDPARTYNOTICES.txt  export_proxies.sh  fmha_skip.patch  pyproject.toml  sgl-kernel-xpu-technical-overview.pptx  test.txt  test_gemm_sqrsum.py
src/: BuildOnLinux.cmake  CMakeLists.txt  FMHAChunkPrefillXe20.cmake  FMHADecodeSources.cmake  FMHADecodeXe20.cmake  FMHAPrefillXe20.cmake  GdnAttnXe20.cmake  GemmSqrSumXe20.cmake  GroupGemmMxfp4W4A16Xe20.cmake  GroupGemmMxfp4Xe20.cmake  GroupGemmMxfp8W8A16Xe20.cmake  GroupGemmW4A16Xe20.cmake  GroupGemmXe20.cmake  MlaDecodeXe20.cmake  MlaPrefillXe20.cmake  MlaSparseDecodeXattnXe20.cmake  MlaSparseDecodeXe20.cmake  MlaSparsePrefillXe20.cmake  SGEMMLoraAFwdXe20.cmake  SGEMMLoraBFwdXe20.cmake  SparseMlaDecodeXe20.cmake  torch_extension_inkling_attn_prologue.cc  torch_extension_inkling_sconv.cc  torch_extension_sycl.cc  weak_ref_tensor.cpp
src/sycl/: BiasedTopK.cpp  CompressPlan.cpp  Device.cpp  EmbeddingLoraAFwd.cpp  FastTopK.cpp  Fp8MqaLogitsXe20.cpp  FusedQIndexerRopeHadamardQuant.cpp  FusedQKNormRope.cpp  FusedQKRope.cpp  GroupGemm.cpp  GroupGemmMxfp4W4A16Xe20.cpp  GroupGemmMxfp4W4A16Xe20LauncherInstance.cpp.in  GroupGemmMxfp4Xe20.cpp  GroupGemmMxfp4Xe20LauncherInstance.cpp.in  GroupGemmMxfp8W8A16Xe20.cpp  GroupGemmMxfp8W8A16Xe20LauncherInstance.cpp.in  GroupGemmW4A16Xe20.cpp  GroupGemmW4A16Xe20LauncherInstance.cpp.in  GroupGemmXe20.cpp  GroupGemmXe20LauncherInstance.cpp.in  HCPost.cpp  HCPreFuse.cpp  HCPreGemmSqrSum.cpp  HCSplitSinkhorn.cpp  Hadamard.cpp  HashTopK.cpp  HcPreGemm.cpp  InklingAttnPrologue.cpp  InklingSconv.cpp  KVCache.cpp  KVCacheIO.cpp  MHCFusedPostPre.cpp  MHCFusedPostPreSmallBatch.cpp  MHCPost.cpp  MRope.cpp  MambaCausalConv1d.cpp  MambaOps.cpp  MemoryAccess.h  MinPSamplingFromProbs.cpp  MoEAlign.cpp  (+75 more)
src/sycl/comm/: AccumulateType.h  General.h  Numerics.h  Random.h  Sampling.h  common.h  copy_block_slm.hpp  fp8_descale.h
src/sycl/gdn_attn/: chunk_causal_conv1d.hpp  chunk_causal_conv1d_tiled.hpp  chunk_gated_delta_rule.cpp  chunk_gated_delta_rule.h  gdn_attn_interface_impl.hpp  gdn_attn_utils.h  l2norm_kernel.hpp
src/sycl/kernels/: xe_fmha_fwd_docode_runner.cpp
src/sycl/kernels/chunk_prefill/: chunk_prefill_runner.hpp  fp8_descale.h  xe_chunk_prefill.hpp  xe_flash_attn_chunk_prefill_epilogue.hpp  xe_flash_attn_chunk_prefill_mma.hpp  xe_flash_attn_chunk_prefill_softmax_epilogue.hpp  xe_rope.h
src/sycl/kernels/flash_attention/: copy_block_slm.hpp  fmha_fusion.hpp  tile_scheduler_split_kv.hpp  xe_fhma_fwd_kernel.hpp  xe_flash_attn_split_kv.hpp  xe_flash_attn_split_kv_epilogue.hpp  xe_flash_attn_split_kv_mma.hpp  xe_flash_attn_split_kv_softmax_epilogue.hpp  xe_fmha_fwd_docode_runner.cpp  xe_fmha_fwd_docode_runner.hpp  xe_fmha_fwd_epilogue.hpp  xe_fmha_fwd_mainloop.hpp  xe_tile_scheduler.hpp
src/sycl/kernels/flash_attention_v2/: xe_fmha_fwd_chunkprefill_dispatch.hpp  xe_fmha_fwd_chunkprefill_runner.hpp  xe_fmha_fwd_decode_dispatch.hpp  xe_fmha_fwd_decode_fp8_kernel.cpp.in  xe_fmha_fwd_decode_kernel.cpp.in  xe_fmha_fwd_decode_nopage_kernel.cpp.in  xe_fmha_fwd_decode_runner.hpp  xe_fmha_fwd_prefill_dispatch.hpp  xe_fmha_fwd_prefill_fp8_kernel.cpp.in  xe_fmha_fwd_prefill_kernel.cpp.in  xe_fmha_fwd_prefill_nopage_kernel.cpp.in  xe_fmha_fwd_prefill_runner.hpp  xe_fmha_fwd_split_decode_fp8_kernel.cpp.in  xe_fmha_fwd_split_decode_kernel.cpp.in
src/sycl/kernels/flash_attention_v2/collective/: fmha_fusion.hpp  xe_fmha_fwd_epilogue.hpp  xe_fmha_fwd_mainloop.hpp
src/sycl/kernels/flash_attention_v2/kernel/: xe_fhma_fwd_kernel.hpp  xe_reduce_split_k.h  xe_reduce_split_k.hpp  xe_tile_scheduler.hpp
src/sycl/kernels/gdn_attn/: causal_conv1d.hpp  chunk_gated_delta_rule_kernels_xe20.hpp  gated_delta_rule.hpp  gdn_attn_interface_impl.hpp  gdn_attn_utils.h  gdn_sgl_compat.h  gdn_vllm_compat.h
src/sycl/kernels/gdn_attn/xe_2/: chunk_causal_conv1d_tiled_xe2.hpp  chunk_causal_conv1d_xe2.hpp  chunk_gated_delta_rule_kernels_xe2.hpp  chunk_gated_delta_rule_xe2.cpp  chunk_gated_delta_rule_xe2.h  gemm.hpp  l2norm.cpp  l2norm.h  l2norm_kernel.hpp
src/sycl/kernels/gemm_sqrsum/: README.md  test_gemm_sqrsum.cpp
src/sycl/kernels/gemm_sqrsum/collective/: xe_gemm_sqrsum_epilogue.hpp  xe_gemm_sqrsum_mainloop.hpp
src/sycl/kernels/gemm_sqrsum/device/: gemm_sqrsum_dispatch.hpp  gemm_sqrsum_example.hpp  gemm_sqrsum_runner.hpp  gemm_sqrsum_types.hpp
src/sycl/kernels/gemm_sqrsum/kernel/: gemm_sqrsum_tile_scheduler.hpp  xe_gemm_sqrsum_kernel.hpp
src/sycl/kernels/hc_pre_gemm_sqr_sum/collective/: xe_hc_pre_gemm_sqr_sum_epilogue.hpp  (+1 more)
src/sycl/kernels/lora/: group_gemm_lora_launcher.hpp
src/sycl/kernels/mla/: mla_decode_dispatch.hpp  mla_decode_types.hpp  mla_runner.hpp  xe_mla_epilogue.hpp  xe_mla_kernel.hpp
src/sycl/kernels/mla_sparse/: SPARSE_MLA_DESIGN.md  copy_block_slm.hpp  flash.h  flash_common_xpu.hpp  sparse_mla_decode_fp8_fwd.hpp  sparse_mla_decode_fp8_fwd_topklen_k512_qfp8.cpp  sparse_mla_prefill_fwd.hpp  sparse_mla_prefill_fwd_topklen_k576.cpp  utils.h
src/sycl/kernels/mla_sparse_xattn/: copy_block_slm.hpp  flash.h  flash_common_xpu.hpp  namespace_config.h  sparse_mla_decode_fp8_fwd.hpp  sparse_mla_decode_fp8_fwd_k512_qbf16.cpp  sparse_mla_decode_fp8_fwd_k512_qfp8.cpp  sparse_mla_decode_fp8_fwd_topklen_k512_qbf16.cpp  sparse_mla_decode_fp8_fwd_topklen_k512_qfp8.cpp  sparse_mla_prefill_fwd.hpp  sparse_mla_prefill_fwd_k512.cpp  sparse_mla_prefill_fwd_k576.cpp  sparse_mla_prefill_fwd_topklen_k512.cpp  sparse_mla_prefill_fwd_topklen_k576.cpp  utils.h
src/sycl/kernels/moe/: activations.cpp  dispatch_policy.hpp  moe_kernel.hpp  moe_mainloop.hpp  moe_tile_scheduler.hpp  prepare_inputs.cpp  topk_softmax.cpp  xe_array_epilogue.hpp  xe_array_mma.hpp  xe_moe_gemm.hpp
src/sycl/kernels/nsa/: fp8_mqa_gemm_xe20.hpp  fp8_mqa_logits_kernel.hpp
(+377 files in other folders)
