[build-system]
requires = [
  "scikit-build-core>=0.10",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "sgl-kernel"
version = "0.11.0"
description = "Kernel Library for SGLang"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: GPU"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/sgl-project/sglang/tree/main/sgl-kernel"
"Bug Tracker" = "https://github.com/sgl-project/sglang/issues"

[tool.wheel]
exclude = [
  "dist*",
  "tests*",
]

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build"
minimum-version = "build-system.requires"

wheel.py-api = "cp39"
wheel.license-files = []
wheel.packages = ["python/sgl_kernel"]

# Auto-rebuild on import: after a one-time `pip install -e .`, every
# `import sgl_kernel` runs `cmake --build` + `cmake --install` against the
# persistent build dir. Combined with CONFIGURE_DEPENDS on the source globs,
# the build system handles everything automatically — edits recompile only the
# touched TUs, and newly-added source files trigger a reconfigure — with no
# manual build command. Requires build-dir to be set (it is, above).
editable.rebuild = true
editable.verbose = false
