[build-system]
requires = [
  "scikit-build-core>=0.10",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "sglang-kernel-xpu"
version = "0.1.0"
description = "XPU Kernel Library for SGLang"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/sgl-project/sgl-kernel-xpu"
"Bug Tracker" = "https://github.com/sgl-project/sgl-kernel-xpu/issues"

[tool.wheel]
exclude = [
  "dist*",
  "tests*",
]

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build"
minimum-version = "build-system.requires"

wheel.py-api = "cp310"
wheel.license-files = []
wheel.packages = ["python/sgl_kernel"]
